--- a/项目说明.md
+++ b/项目说明.md
@@ -2,7 +2,7 @@
 ## Java成绩爬虫（crawler1）  
 * 利用jsoup技术获取网页上的源代码，通过分析网页上的源代码，利用jsoup提供的选择器选择出我们想要的数据输出在控制台上  
 * 这里由于教务网是需要登录的网站，网站需要有用户的登录信息才能返回给相应用户的数据，不同的用户的信息是不一样的  
-* 网站登陆上去后在跳转页面的时候都会带着cookie（通过浏览器的查看网页跳转是发送的数据得出），其实是JSESSIONID，会话保持
+* 网站登陆上去后在跳转页面的时候都会带着cookie（通过浏览器的查看网页跳转是发送的数据得出），也可以说是会话保持
 ***
 ## Java电影下载连接爬虫（urlcrawler）  
 * 和教务网成绩爬虫所用的技术一样，都是jsoup解析网页源代码，选择出有用的数据。  
